Adjust to receive the applications

--- a/src/microfrontend-layout.html
+++ b/src/microfrontend-layout.html
@@ -18,8 +18,8 @@
   -->
 
   <main>
-    <route default>
-      <application name="@single-spa/welcome"></application>
+    <route default>     
+      <application name="@spms/core"></application>
     </route>
   </main>
 </single-spa-router>
